--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     {{> _loader}}
-    {{> _navigation}}
+    {{!> _navigation}}
     <main role="main">
         {{> body}}
     </main>
